tests/Checker/everything/errors/26b.sol
======= The VC compiler =======

Pass 1: Lexical and syntactic Analysis
Pass 2: Semantic Analysis
ERROR: 0(0)..0(0): *26: too few actual parameters
Compilation was unsuccessful.
